# AdventofCode

./: .gitignore  .replit  Automation.md  README.md  collect  main.py  pyproject.toml  requirements.txt  submit  test
.github/workflows/: Badges.yml  ReadmeBadges.yml  readme-stars.yml
AdventofCode2019/Day 3/: Day3.py
AdventofCode2019/Day 5/: Day5.py
AdventofCode2019/Day 7/: Day7.py
AdventofCode2019/Day 8/: main.py
AdventofCode2019/Day 9/: Day9.py
AdventofCode2020/: Day1ProgramLessCretinous.py
AdventofCode2020/Day1/: Day1EvenLessCretinous.py  Day1ProgramCretinous.py
AdventofCode2020/Day10/: Day10Solution.py
AdventofCode2020/Day11/: Day11Solution.py
AdventofCode2020/Day12/: Day12Solution.py
AdventofCode2020/Day13/: Day13Solution.py
AdventofCode2020/Day2/: Day2Solution.py
AdventofCode2020/Day3/: Day3Solution.py
AdventofCode2020/Day4/: Day4Solution.py
AdventofCode2020/Day5/: Day5Solution.py
AdventofCode2020/Day6/: Day6Solution.py
AdventofCode2020/Day9/: Day9Solution.py
AdventofCode2021/: Day1.py
AdventofCode2021/Day 10/: Day10.py
AdventofCode2021/Day 3/: Day3.py
AdventofCode2021/Day 6/: Day6.py
AdventofCode2021/Day 7/: Day 7.py
AdventofCode2021/Day 8/: Day8.py
AdventofCode2021/Day 9/: Day9.py
AdventofCode2022/Day2/: Day2.py
AdventofCode2022/Day3/: Day3.py
AdventofCode2022/Day6/: Day2.py
AdventofCode2022/Day7/: Day7.py
AdventofCode2022/Day8/: Day8.py
AdventofCode2024/: AoC2024.env  main.py
problems/2025/: day_01.py
templates/: daily_collect.py  solution.py  test_solution.py
utils/: aoc_client.py  solution.py
(+216 files in other folders)
