[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = "Poetry env manager for Advent of Code"
authors = ["henriupton99 <henriupton99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.2"
requests = "^2.32.3"
pytest = "^8.3.4"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
